--- a/package.json
+++ b/package.json
@@ -29,20 +29,9 @@
   "author": "Juan Cazala <juan@decentraland.org>",
   "license": "MIT",
   "devDependencies": {
-    "@types/mocha": "^5.2.7",
-    "@types/puppeteer": "^1.12.4",
-    "dcl-tslint-config-standard": "^1.1.0",
-    "ganache-core": "^2.5.5",
-    "mocha": "5.2.0",
-    "puppeteer": "^1.16.0",
-    "rocketh": "https://github.com/wighawag/rocketh.git#3bcfdb3b7d38ac98449b3d5075e12868b32d5a0c",
-    "serve-handler": "5.0.8",
-    "solc": "0.5.2",
+    "@types/puppeteer": "^5.4.4",
+    "puppeteer": "^10.2.0",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.1",
-    "web3": "1.0.0-beta.34"
-  },
-  "peerDependencies": {
-    "puppeteer": "^1.16.0"
+    "typescript": "^3.5.1"
   }
 }
